# cubiq

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
docs/: CHANGELOG.md  CLI.md  CONTRIBUTING.md  DATABASE.md  DEVELOPMENT.md  INSTALLATION.md  INSTALLER.md  SECURITY.md  TROUBLESHOOTING.md
scripts/: build-cli-sidecar.ps1  patch-nsis.ps1
src/: App.module.css  App.tsx  QuickAskApp.module.css  QuickAskApp.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsh  installer.nsi
src-tauri/src/: ai.rs  commands.rs  db.rs  hotkey.rs  lib.rs  main.rs  models.rs  streaming.rs  tray.rs
src/components/Chat/: ChatArea.module.css  ChatArea.tsx  MarkdownRenderer.module.css  MarkdownRenderer.tsx
src/components/Folder/: FolderView.module.css  FolderView.tsx
src/components/Settings/: ApiSettings.tsx  AppearanceSettings.tsx  PresetEditor.tsx  PresetsSettings.tsx  SettingsModal.module.css  SettingsModal.tsx  TrashSettings.tsx  constants.ts
src/components/Sidebar/: Sidebar.module.css  Sidebar.tsx
src/components/shared/: DraftPresetSelector.tsx
src/hooks/: useQuickAskStream.ts
src/lib/: ipc.ts
src/store/: index.ts
src/styles/: global.css
src/types/: index.ts  streaming.ts
src/utils/: externalLinks.ts  markdown.ts  theme.ts
