[package]
name = "cubiq"
version = "1.0.1"
description = "Cubiq main app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "cubiq"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cubiq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png", "image-ico"] }
tauri-plugin-log = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["rt", "macros", "sync"] }
tokio-util = "0.7"
futures-util = "0.3"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-positioner = { version = "2.3.1", features = ["tray-icon"] }
tauri-plugin-opener = "2"
clap = { version = "4", features = ["derive"] }
directories = "5"
is-terminal = "0.4"
crossterm = "0.27"

[[bin]]
name = "cubiq"
path = "src/main.rs"

[[bin]]
name = "cubiq-cli"
path = "src/bin/cubiq.rs"
